# pucp-non-relational-db-2026-01

./: README.md
unit-01-foundations-and-nosql-paradigm/: README.md
unit-02-key-value-databases/: README.md
unit-02-key-value-databases/msc-nsdb-redis/: README.md  pom.xml
unit-02-key-value-databases/msc-nsdb-redis/src/main/java/pe/edu/pucp/msc/inf/: Exercise01.java  Exercise02.java  Exercise03.java
unit-02-key-value-databases/msc-nsdb-redis/src/main/java/pe/edu/pucp/msc/inf/auction/: BidderThread.java  MyAuction.java
unit-02-key-value-databases/msc-nsdb-redis/src/main/java/pe/edu/pucp/msc/inf/connectors/: RedisConnectionManager.java
unit-02-key-value-databases/msc-nsdb-redis/src/main/java/pe/edu/pucp/msc/inf/ratelimiting/: MyAPI.java  RequestThread.java
unit-02-key-value-databases/msc-nsdb-redis/src/main/java/pe/edu/pucp/msc/inf/ticketshospital/manager/: TicketManager.java
unit-02-key-value-databases/msc-nsdb-redis/src/main/java/pe/edu/pucp/msc/inf/ticketshospital/thread/: PatientThread.java
unit-03-document-databases-and-mongodb/: CRUD_EXERCISES.md  README.md  RESTAURANTS_EXERCISES.md  docker-compose-mongodb-webconsole.yml
unit-03-document-databases-and-mongodb/mongodb-crud-tests/: README.md  pyproject.toml  test_crud.py
unit-04-column-oriented-databases/: README.md
unit-05-graph-databases/: README.md
unit-06-rest-services-and-nosql-optimization/: README.md
