[project]
name = "mongodb-crud-tests"
version = "0.1.0"
description = "MongoDB CRUD Tests based on PDF slides"
authors = [
    {name = "Author"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "pymongo (>=4.17.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
